--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.4.0",
     "react-loading-icons": "^1.1.0",
     "react-router-dom": "^7.1.5",
+    "react-scripts": "^5.0.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
